force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/ARTL_Bulk_Upload_Staging__c.object-meta.xml
<CustomObject>
    <label>ARTL Bulk Upload Staging</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ARTL_Bulk_Upload_Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ARTL Bulk Upload Stagings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>