force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>