force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>