force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Address_Line_3__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Address Line 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>