force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/ARTL_Bulk_Upload_Iteration__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bulk_Upload_Iteration__c</fullName>
    <label>ARTL Bulk Upload Iteration</label>
    <referenceTo>ARTL_Bulk_Upload_Iteration__c</referenceTo>
    <relationshipLabel>ARTL Bulk Upload Stagings</relationshipLabel>
    <relationshipName>ARTL_Bulk_Upload_Stagings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>