force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/BCP_DCP_Number__c.field-meta.xml
<CustomField>
    <fullName>BCP_DCP_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BCP DCP Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>