force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>