force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>