force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>