force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Forecast_Name__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Forecast Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>