force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>