force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_Applicable__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GST Applicable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>