force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Key_Competitor_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitor_and_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Key Competitor and Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>