force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/OIMID__c.field-meta.xml
<CustomField>
    <fullName>OIMID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OIMID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>