force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>