force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Phone_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Phone Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>