force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Quota_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quota_Amount__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quota Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>