force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>