force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>