force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>