force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Spends_with_Airtel__c.field-meta.xml
<CustomField>
    <fullName>Spends_with_Airtel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Spends with Airtel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>