force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>