force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Street</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>