force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Total_Competitor_Spends__c.field-meta.xml
<CustomField>
    <fullName>Total_Competitor_Spends__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Competitor Spends</label>
    <length>255</length>
    <type>Text</type>
</CustomField>