force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUC</fullName>
            </value>
            <value>
                <fullName>Quota</fullName>
            </value>
            <value>
                <fullName>Asset_to_Quote</fullName>
                <label>Asset to Quote</label>
            </value>
            <value>
                <fullName>BCPDCP_Contact</fullName>
            </value>
            <value>
                <fullName>Party_Contact</fullName>
            </value>
            <value>
                <fullName>BCPDCP_Contact_Update</fullName>
            </value>
            <value>
                <fullName>Party_Contact_Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>