force-app/main/default/objects/ARTL_Bulk_Upload_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Quota</value>
    </filters>
    <label>All</label>
</ListView>